fix storage and maps not showing on android app

--- a/src/app/tab3/tab3.page.scss
+++ b/src/app/tab3/tab3.page.scss
@@ -7,6 +7,6 @@
   }
   
   .refresh-button {
-    margin: -80px 110px;
+    margin: -90px 110px;
   }
   
